--- a/bin/view/MainView.fxml
+++ b/bin/view/MainView.fxml
@@ -14,7 +14,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="444.0" prefWidth="356.0">
                <children>
-                  <Button fx:id="runSimulationClick" layoutX="151.0" layoutY="328.0" mnemonicParsing="false" text="Run Simulation" />
+                  <Button fx:id="runButton" layoutX="151.0" layoutY="328.0" mnemonicParsing="false" onAction="#runButtonClick" text="Run Simulation" />
                   <Label layoutX="24.0" layoutY="218.0" text="Select policy" />
                   <TextField fx:id="DEBBPath" layoutX="22.0" layoutY="67.0" prefHeight="23.0" prefWidth="304.0" />
                   <TextField fx:id="swfPath" layoutX="22.0" layoutY="142.0" prefHeight="23.0" prefWidth="304.0" />
@@ -25,10 +25,7 @@
                   <ComboBox layoutX="24.0" layoutY="233.0" prefHeight="23.0" prefWidth="206.0">
                   	<items>
         				<FXCollections fx:factory="observableArrayList">
-            				<String fx:value="das" />
-            				<String fx:value="UTF-8" />
-            				<String fx:value="MS932" />
-            				<String fx:value="SJIS" />
+            				<String fx:value="FCFS_LoadBalancing" />
         				</FXCollections>
     				</items>
     				<value>
@@ -39,7 +36,7 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="415.0" prefWidth="256.0">
                <children>
-                  <TextArea layoutX="10.0" layoutY="47.0" prefHeight="296.0" prefWidth="235.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="47.0" />
+                  <TextArea fx:id="console" layoutX="10.0" layoutY="47.0" prefHeight="296.0" prefWidth="235.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="6.0" AnchorPane.topAnchor="47.0" />
                   <Label layoutX="14.0" layoutY="32.0" text="Console" />
                </children>
             </AnchorPane>
