--- a/src/view/PeriodDistributionView.fxml
+++ b/src/view/PeriodDistributionView.fxml
@@ -38,8 +38,8 @@
 				  </ComboBox>
             <Label text="PeriodBeginTime" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
             <Label text="PeriodEndTime" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-            <TextField GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2" />
-            <TextField GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+            <TextField fx:id="PeriodBeginTime" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="2" />
+            <TextField fx:id="PeriodEndTime" GridPane.columnIndex="2" GridPane.columnSpan="3" GridPane.rowIndex="3" />
          </children>
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="70.0" />
